--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Reports</h1>
+<div class="reports main">
+	<h1 class="page_title">Reports</h1>
 
-<%= link_to "Player report", reports_players_path, {:class => "players_link"} %><br/>
-<%= link_to "Questions answered correctly on first attempt report", reports_answered_correctly_path, {:class => "answered_correctly_link"} %>
+	<p class="support_line"><%= link_to "Player report", reports_players_path, {:class => "players_link"} %></p>
+	<p class="support_line"><%= link_to "Questions answered correctly on first attempt report", reports_answered_correctly_path %></p>
+</div>
