--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,15 +1,17 @@
-<div class="register_form">
-  <%= semantic_form_for @player do |f| %>
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
-    <%= f.input :email, :as => :email %>
-    <%= f.input :mobile_number %>
-    <%= f.input :city %>
-    <%= f.input :company_name %>
-    <%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
-    <%= f.actions do %>
-      <%= f.action :submit, :label => 'Register', :button_html => {:class => 'btn large'} %>
-    <% end %>
+<div class="register_form main">
+	<%= semantic_form_for @player do |f| %>
+		<%= f.inputs :name => "New Player" do %>
+			<%= f.input :first_name %>
+			<%= f.input :last_name %>
+			<%= f.input :email, :as => :email %>
+			<%= f.input :mobile_number %>
+			<%= f.input :city %>
+			<%= f.input :company_name %>
+			<%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
+		<% end %>
 
-  <% end %>
+		<%= f.actions do %>
+			<%= f.action :submit, :label => 'Register', :button_html => {:class => 'button large'} %>
+		<% end %>
+	<% end %>
 </div>
