--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -1,12 +1,12 @@
-<div>
-  <div id="instruction_box" class="center">
-  </div>
-  <div class="button_at_middle">
-    <%= link_to 'Register to play', new_player_path, {:class => 'btn large'} %>
-  </div>
-  <div class="center">
-    <%= link_to 'Already registered? Click here to login', registered_path, {:id => 'welcome'} %>
-  </div>
-	<br />
-	<br />
+<div class="welcome login main">
+	<%= semantic_form_for @player, :url => registered_login_path do |f| %>
+		<%= f.inputs :name => "Login to Play" do %>
+			<%= f.input :email %>
+		<% end %>
+		<%= f.actions do %>
+			<%= f.action :submit, :label => 'Play', :button_html => {:class => 'button'} %>
+		<% end %>
+	<% end %>
+
+	<p class="support_line"><%= link_to 'Not registered? Click here to register!', new_player_path %></p>
 </div>
