Changed 'win' message

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -8,7 +8,7 @@
 	<section id="questions"></section>
 
 	<div id="win" class="alert-message block-message success hidden">
-		<p class="result support_line">You win. Contact a TWer to know about prizes!</p>
+		<p class="result support_line">Parab&eacute;ns voc&ecirc; est&aacute; concorrendo aos nossos pr&ecirc;mios! Nos siga no twitter para saber o resultado! <a href="https://twitter.com/thoughtworks_pt">@thoughtworks_pt</a></p>
 		<p id="leaderboard-position" class="support_line"></p>
 	</div>
 
